// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c4 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c5 {
  box-sizing: border-box;
  max-width: 600px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c10 {
  box-sizing: border-box;
  text-align: center;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
  text-transform: none;
}

.c11:hover,
.c11:focus {
  background: #B29DFF;
}

.c11:active {
  background: #C5B6FF;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-left: 24px;
  width: 224px;
  text-transform: none;
}

.c12:hover,
.c12:focus {
  background: rgba(255,255,255,0.07);
}

.c12:active {
  background: rgba(255,255,255,0.13);
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  font-size: 24px;
  margin: 0px;
  margin-bottom: 8px;
  font-weight: 700;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  margin: 0px;
  font-weight: 400;
}

.c7 {
  display: block;
  outline: none;
  margin-bottom: 24px;
  margin-left: auto;
  margin-right: auto;
  height: 160px;
}

.c3 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3 sc-AxirZ c4"
      width="100%"
    >
      <div
        class="c5"
      >
        <div
          class="c6"
        >
          <img
            class="c7"
            height="160px"
            src="file_stub"
          />
          <div
            class="c8"
            font-size="24"
            font-weight="700"
          >
            Add your first server to Teleport
          </div>
          <div
            class="c9"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Server Access consolidates SSH access across all environments.
          </div>
        </div>
        <div
          class="c10"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c11"
              kind="primary"
              width="224px"
            >
              Add Resource
            </button>
          </a>
          <a
            class="c12"
            href="https://goteleport.com/docs/server-access/getting-started/"
            kind="border"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            View Documentation
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c3 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c3 a {
  color: #FFFFFF;
}

.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c28 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c28:hover,
.c28:focus {
  background: rgba(255,255,255,0.07);
}

.c28:active {
  background: rgba(255,255,255,0.13);
}

.c28:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c32 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c32:disabled {
  color: rgba(255,255,255,0.36);
}

.c32:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c32:hover:enabled,
.c32:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c32:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c34 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c34:hover:enabled,
.c34:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c34:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c29 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.72);
  margin-left: 4px;
  margin-right: -8px;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c14 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.c23 {
  box-sizing: border-box;
  display: flex;
}

.c26 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c31 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: rgba(255,255,255,0.13);
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c25 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c25 > thead > tr > th,
.c25 > tbody > tr > th,
.c25 > tfoot > tr > th,
.c25 > thead > tr > td,
.c25 > tbody > tr > td,
.c25 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c25 > thead > tr > th:first-child,
.c25 > tbody > tr > th:first-child,
.c25 > tfoot > tr > th:first-child,
.c25 > thead > tr > td:first-child,
.c25 > tbody > tr > td:first-child,
.c25 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c25 > thead > tr > th:last-child,
.c25 > tbody > tr > th:last-child,
.c25 > tfoot > tr > th:last-child,
.c25 > thead > tr > td:last-child,
.c25 > tbody > tr > td:last-child,
.c25 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

.c25 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c25 > thead > tr > th svg {
  height: 12px;
}

.c25 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c25 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c25 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c30 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c27 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c27:hover {
  background-color: rgba(255,255,255,0.13);
}

.c33 svg {
  font-size: 20px;
}

.c33 svg:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c11::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c22 {
  height: 18px;
  width: 18px;
  color: inherit;
}

.c20 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c20:hover {
  cursor: pointer;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
  </div>
  <div
    class="c3"
    kind="danger"
  >
    <div>
      some error message
    </div>
  </div>
  <div
    class="c4"
  >
    <form
      class="c5"
    >
      <div
        class="c6"
        width="100%"
      >
        <div
          class="c7"
          style="width: 70%;"
        >
          <div
            class="c8"
            width="100%"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
              >
                <input
                  class="c11"
                  placeholder="SEARCH..."
                  value=""
                />
                <div
                  class="c12"
                >
                  <div
                    class="c13"
                  >
                    <div
                      class="c14"
                    >
                      <label
                        class="c15"
                      >
                        <input
                          class="c16"
                          type="checkbox"
                        />
                        <div
                          class="c17 c18"
                        />
                      </label>
                      <div
                        class="c19"
                      >
                        Advanced
                      </div>
                      <span
                        class="c20"
                        role="icon"
                      >
                        <span
                          class="c21 c22"
                        >
                          <svg
                            fill="currentColor"
                            height="20"
                            viewBox="0 0 24 24"
                            width="20"
                          >
                            <path
                              d="M11.625 8.8125C12.1428 8.8125 12.5625 8.39277 12.5625 7.875C12.5625 7.35723 12.1428 6.9375 11.625 6.9375C11.1072 6.9375 10.6875 7.35723 10.6875 7.875C10.6875 8.39277 11.1072 8.8125 11.625 8.8125Z"
                            />
                            <path
                              d="M10.5 11.25C10.5 10.8358 10.8358 10.5 11.25 10.5C11.6478 10.5 12.0294 10.658 12.3107 10.9393C12.592 11.2206 12.75 11.6022 12.75 12V15.75C13.1642 15.75 13.5 16.0858 13.5 16.5C13.5 16.9142 13.1642 17.25 12.75 17.25C12.3522 17.25 11.9706 17.092 11.6893 16.8107C11.408 16.5294 11.25 16.1478 11.25 15.75V12C10.8358 12 10.5 11.6642 10.5 11.25Z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c23"
        >
          <div
            class="c24"
            color="text.main"
            style="text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c25"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Hostname
              <span
                class="c21 icon icon-chevronup"
                title="sort items asc"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            fujedu
          </td>
          <td>
            172.10.1.20:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            facuzguv
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            duzsevkig
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            kuhinur
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c30"
    >
      <div
        class="c31"
        width="100%"
      >
        <div
          class="c23"
        >
          <button
            class="c32 c33"
            title="Previous page"
          >
            <span
              class="c21 icon icon-circlearrowleft"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="c34 c33"
            title="Next page"
          >
            <span
              class="c21 icon icon-circlearrowright"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`loaded 1`] = `
.c8 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
  text-transform: none;
}

.c3:hover,
.c3:focus {
  background: #B29DFF;
}

.c3:active {
  background: #C5B6FF;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c28 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  height: 24px;
}

.c28:hover,
.c28:focus {
  background: rgba(255,255,255,0.07);
}

.c28:active {
  background: rgba(255,255,255,0.13);
}

.c28:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c32 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
  margin-right: 0px;
}

.c32:disabled {
  color: rgba(255,255,255,0.36);
}

.c32:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c32:hover:enabled,
.c32:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c32:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c34 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0px;
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
}

.c34:disabled {
  color: rgba(255,255,255,0.36);
  cursor: default;
}

.c34:hover:enabled,
.c34:focus:enabled {
  background: rgba(255,255,255,0.13);
}

.c34:active:enabled {
  background: rgba(255,255,255,0.18);
}

.c19 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c21 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c29 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.72);
  margin-left: 4px;
  margin-right: -8px;
}

.c6 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c7 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c14 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
  display: flex;
  align-items: center;
  gap: 8px;
}

.c23 {
  box-sizing: border-box;
  display: flex;
}

.c26 {
  box-sizing: border-box;
  display: flex;
  flex-wrap: wrap;
}

.c31 {
  box-sizing: border-box;
  width: 100%;
  display: flex;
  justify-content: flex-end;
}

.c15 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c15[disabled] {
  cursor: default;
}

.c18 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c18:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #9F85FF;
}

.c16 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c16:checked + .c17 {
  background: rgba(255,255,255,0.13);
}

.c16:checked + .c17:before {
  transform: translate(16px,-50%);
}

.c16:disabled + .c17 {
  background: #222C59;
}

.c16:disabled + .c17:before {
  background: #455a64;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c25 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c25 > thead > tr > th,
.c25 > tbody > tr > th,
.c25 > tfoot > tr > th,
.c25 > thead > tr > td,
.c25 > tbody > tr > td,
.c25 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c25 > thead > tr > th:first-child,
.c25 > tbody > tr > th:first-child,
.c25 > tfoot > tr > th:first-child,
.c25 > thead > tr > td:first-child,
.c25 > tbody > tr > td:first-child,
.c25 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c25 > thead > tr > th:last-child,
.c25 > tbody > tr > th:last-child,
.c25 > tfoot > tr > th:last-child,
.c25 > thead > tr > td:last-child,
.c25 > tbody > tr > td:last-child,
.c25 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c25 > tbody > tr > td {
  vertical-align: middle;
}

.c25 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c25 > thead > tr > th svg {
  height: 12px;
}

.c25 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c25 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c25 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c5 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c30 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top: 1px solid rgba(255,255,255,0.07);
}

.c4 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
  overflow: hidden;
  border-radius: 8px;
}

.c27 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
  cursor: pointer;
}

.c27:hover {
  background-color: rgba(255,255,255,0.13);
}

.c33 svg {
  font-size: 20px;
}

.c33 svg:before {
  padding-left: 1px;
}

.c13 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(255,255,255,0.07);
  border-radius: 200px;
}

.c12 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #222C59;
  border-radius: 200px;
}

.c10 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: transparent;
}

.c9 {
  background: #0C143D;
  border-radius: 200px;
  width: 100%;
  height: 32px;
}

.c11 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: #0C143D;
  padding-right: 184px;
}

.c11:hover,
.c11:focus,
.c11:active {
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
}

.c11::placeholder {
  color: rgba(255,255,255,0.54);
  font-size: 12px;
}

.c22 {
  height: 18px;
  width: 18px;
  color: inherit;
}

.c20 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c20:hover {
  cursor: pointer;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      Servers
    </div>
    <a
      href="/web/discover"
      style="text-decoration: none;"
    >
      <button
        class="c3"
        kind="primary"
        title=""
        width="240px"
      >
        Add server
      </button>
    </a>
  </div>
  <div
    class="c4"
  >
    <form
      class="c5"
    >
      <div
        class="c6"
        width="100%"
      >
        <div
          class="c7"
          style="width: 70%;"
        >
          <div
            class="c8"
            width="100%"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
              >
                <input
                  class="c11"
                  placeholder="SEARCH..."
                  value=""
                />
                <div
                  class="c12"
                >
                  <div
                    class="c13"
                  >
                    <div
                      class="c14"
                    >
                      <label
                        class="c15"
                      >
                        <input
                          class="c16"
                          type="checkbox"
                        />
                        <div
                          class="c17 c18"
                        />
                      </label>
                      <div
                        class="c19"
                      >
                        Advanced
                      </div>
                      <span
                        class="c20"
                        role="icon"
                      >
                        <span
                          class="c21 c22"
                        >
                          <svg
                            fill="currentColor"
                            height="20"
                            viewBox="0 0 24 24"
                            width="20"
                          >
                            <path
                              d="M11.625 8.8125C12.1428 8.8125 12.5625 8.39277 12.5625 7.875C12.5625 7.35723 12.1428 6.9375 11.625 6.9375C11.1072 6.9375 10.6875 7.35723 10.6875 7.875C10.6875 8.39277 11.1072 8.8125 11.625 8.8125Z"
                            />
                            <path
                              d="M10.5 11.25C10.5 10.8358 10.8358 10.5 11.25 10.5C11.6478 10.5 12.0294 10.658 12.3107 10.9393C12.592 11.2206 12.75 11.6022 12.75 12V15.75C13.1642 15.75 13.5 16.0858 13.5 16.5C13.5 16.9142 13.1642 17.25 12.75 17.25C12.3522 17.25 11.9706 17.092 11.6893 16.8107C11.408 16.5294 11.25 16.1478 11.25 15.75V12C10.8358 12 10.5 11.6642 10.5 11.25Z"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="c23"
        >
          <div
            class="c24"
            color="text.main"
            style="text-transform: uppercase;"
          >
            Showing 
            <strong>
              1
            </strong>
             - 
            <strong>
              7
            </strong>
             of
             
            <strong>
              7
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c25"
    >
      <thead>
        <tr>
          <th>
            <a
              style="display: flex; align-items: center;"
            >
              Hostname
              <span
                class="c21 icon icon-chevronup"
                title="sort items asc"
              >
                <svg
                  fill="currentColor"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            fujedu
          </td>
          <td>
            172.10.1.20:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            facuzguv
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            duzsevkig
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            kuhinur
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            172.10.1.1:3022
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
        <tr>
          <td>
            zebpecda
          </td>
          <td>
            <span
              style="cursor: default; white-space: nowrap;"
              title="This node is connected to cluster through reverse tunnel"
            >
              ← tunnel
            </span>
          </td>
          <td>
            <div
              class="c26"
            >
              <div
                class="c27"
                kind="secondary"
              >
                cluster: one
              </div>
              <div
                class="c27"
                kind="secondary"
              >
                kernel: 4.15.0-51-generic
              </div>
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c28"
              height="24px"
              kind="border"
            >
              Connect
              <span
                class="c29 icon icon-chevrondown"
                color="text.slightlyMuted"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 24 24"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c30"
    >
      <div
        class="c31"
        width="100%"
      >
        <div
          class="c23"
        >
          <button
            class="c32 c33"
            title="Previous page"
          >
            <span
              class="c21 icon icon-circlearrowleft"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
                />
                <path
                  clip-rule="evenodd"
                  d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
          <button
            class="c34 c33"
            title="Next page"
          >
            <span
              class="c21 icon icon-circlearrowright"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c3 {
  box-sizing: border-box;
  max-width: 664px;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  color: #FFFFFF;
  text-align: center;
  border-radius: 12px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Servers
      </div>
    </div>
    <div
      class="c3"
      color="text.main"
    >
      <div
        class="c4"
      >
        No Servers Found
      </div>
      <div
        class="c5"
      >
        Either there are no 
        servers
         in the "
        <span
          class="c6"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
